Import of BFOZ/p5-WWW-iTunesConnect-0.2 from CPAN.
gitpan-cpan-distribution: p5-WWW-iTunesConnect
gitpan-cpan-version:      0.2
gitpan-cpan-path:         BFOZ/p5-WWW-iTunesConnect-0.2.tar.gz
gitpan-cpan-author:       BFOZ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WWW::iTunesConnect.
 
+0.02  Sat Dec  6 
+	- Updates to form element names because Apple updated the pages
+
 0.01  Sat Nov 15 19:21:04 2008
 	- original version; created by h2xs 1.23 with options
 		-AX --skip-exporter --use-new-tests -m WWW::iTunesConnect
