--- a/README
+++ b/README
@@ -22,6 +22,7 @@ This module requires these other modules and libraries:
 
     LWP
     HTML::Form
+    HTML::Tree
     IO::Uncompress::Gunzip
     Net::SSLeay
 
@@ -30,7 +31,4 @@ COPYRIGHT AND LICENCE
 Copyright (C) 2008 by Brandon Fosdick
 
 This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.8 or,
-at your option, any later version of Perl 5 you may have available.
-
-
+it under the terms of the BSD License.
