--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension WWW::iTunesConnect.
 
+1.16  Mon Aug 13 2010
+	- Fix parsing of financial reports
+	- Add the ability to fetch all pages of the financial reports form
+	- Find the number of available financial reports
+
 1.15  Mon Aug  9 2010 11:00
 	- Apple changed "Sales\Trend Reports" to "Sales and Trends"
 	- New algorithm for finding the financial reports table
